# CS184-Final-Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  devenv.nix  devenv.yaml  index.html  milestone.html  proposal.html  run.sh  sync_milestone.sh
.history/: milestone_20260420235112.html  milestone_20260420235425.html  milestone_20260420235712.html  milestone_20260420235740.html
src/: MeshViewer.cpp  MeshViewer.h  main.cpp  shader.frag  shader.vert
src/core/: BCT.cpp  BCT.h  BVH.cpp  BVH.h  Constraints.cpp  Constraints.h  DeterministicReduction.h  ExtrapolationSolver.cpp  ExtrapolationSolver.h  FaceGeom.cpp  FaceGeom.h  GradCheck.cpp  GradCheck.h  HsPreconditioner.cpp  HsPreconditioner.h  MeshData.cpp  MeshData.h  Obstacle.cpp  Obstacle.h  OptimizeTPE.cpp  OptimizeTPE.h  PathEnergy.cpp  PathEnergy.h  Remesh.cpp  Remesh.h  ShellEnergy.cpp  ShellEnergy.h  SurfaceBarrier.cpp  SurfaceBarrier.h  TPE.cpp  TPE.h  TestMeshes.cpp  TestMeshes.h  TrustRegionSolver.cpp  TrustRegionSolver.h
src/viewer/: MeshViewer.cpp  MeshViewer.h  main.cpp
tests/: bench_openmp_optimize.cpp  demo_canonical_genus0.cpp  demo_compression.cpp  demo_extrapolation.cpp  demo_gallery_genus0.cpp  demo_gallery_genus1.cpp  demo_gallery_genus2.cpp  demo_interpolation.cpp  demo_phase1_flow.cpp  demo_phase2_hs_flow.cpp  demo_phase3_ball_tube.cpp  demo_phase3_ball_tube_interp.cpp  demo_phase3_translated_sphere_path.cpp  dump_test_meshes.cpp  plot_phase1_flow.py  test_hs_kernel_exponent.cpp  test_phase0.cpp  test_phase1.cpp  test_phase2.cpp  test_phase3.cpp
tools/: cross_validate_repulsor.cpp  diagnose_bh_cancellation.cpp  diagnose_bh_leaf.cpp  polyscope_viewer.cpp  render_ball_tube_assets.py  render_gallery_video.py
websites/: final.html  final_slides.html  final_video.html  final_video_script.md  final_video_slides.tex  milestone.html  proposal.html
